[CORRECTION] Aligne les indices avec les catégories
En changeant la police des scores pour Arial (pour aligner les
scores entre eux) on a provoqué un désalignement avec les noms des
catégories.

Ce commit résout le problème.

--- a/public/assets/styles/carteInformations.css
+++ b/public/assets/styles/carteInformations.css
@@ -44,6 +44,8 @@
 
 .carte dd {
   font-family: 'Arial';
+
+  padding-top: 0.2em;
   text-align: right;
 }
 
